@@ -1,5 +1,7 @@
 #! @PERL@
 ##
+## @configure_input@
+##
 ## Virtual terminal interface shell command extractor.
 ## Copyright (C) 2000 Kunihiro Ishiguro
 ## 
@@ -54,7 +56,7 @@ $ignore{'"show route-map"'} = "ignore";
 foreach (@ARGV) {
     $file = $_;
 
-    open (FH, "cpp -DHAVE_CONFIG_H -DVTYSH_EXTRACT_PL -DHAVE_IPV6 -I. -I.. -I../lib $file |");
+    open (FH, "cpp -DHAVE_CONFIG_H -DVTYSH_EXTRACT_PL -DHAVE_IPV6 -I@top_builddir@ -I@srcdir@/ -I@srcdir@/.. -I@top_srcdir@/lib $file |");
     local $/; undef $/;
     $line = <FH>;
     close (FH);
